--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Firestore" Version="3.7.0" />
+    <PackageReference Include="Google.Cloud.Firestore.V1" Version="3.7.0" />
   </ItemGroup>
 
 </Project>
