--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Firestore" Version="3.7.0" />
     <PackageReference Include="Google.Cloud.Firestore.V1" Version="3.7.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
   </ItemGroup>
 
 </Project>
